fix: search input jumps on hover on smaller screens #3124

--- a/src/app/homepage/header/header.component.scss
+++ b/src/app/homepage/header/header.component.scss
@@ -416,6 +416,10 @@ header {
   @media (min-width: 1200px) and (max-width: 1300px) {
     width: 190px;
   }
+
+  @media (max-width: 680px) {
+    width: 190px;
+  }
 }
 
 .search-input::placeholder {
